# FinanceDataReader

./: .gitattributes  .gitignore  Google_Colaboratory_(revised).ipynb  LICENSE.txt  README.md  SP500 가격 데이터 수집과 수익률 분석.ipynb  __init__.py  _utils.py  back_chart.py  chart.py  data.py  pyproject.toml  setup.py
.github/workflows/: sphinx.yml
FinanceDataReader/docs/: Makefile
FinanceDataReader/docs/_build/doctrees/: environment.pickle  ticker.doctree  tickers.doctree
FinanceDataReader/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js  ticker.html  tickers.html
FinanceDataReader/docs/_build/html/_sources/: index.rst.txt  ticker.rst.txt  tickers.rst.txt
FinanceDataReader/docs/_build/html/_static/: documentation_options.js
FinanceDataReader/fred/: data.py
FinanceDataReader/naver/: listing.py
FinanceDataReader/tutorial/: FinanceDataReader Tutorial - 수정주가.ipynb
FinanceDataReader/yahoo/: data.py
calendars/: holidays-krx.csv  holidays-nyse.csv
chart/: __init__.py  candle.py  plot.py
docs/: conf.py  index.rst  make.bat  requirements.txt  tickers.rst
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/source/: ticker.doctree
docs/_build/html/: search.html
docs/_build/html/source/: ticker.html
ecos/: data.py  snap.py
fred/: data.py
investing/: data.py  listing.py
krx/: data.py  listing.py  snap.py
nasdaq/: listing.py
naver/: data.py  listing.py  snap.py
src/FinanceDataReader/: __init__.py  cli.py  data.py
src/FinanceDataReader/ecos/: snap.py
src/FinanceDataReader/fred/: data.py
src/FinanceDataReader/investing/: data.py  listing.py
src/FinanceDataReader/krx/: data.py  listing.py  snap.py
src/FinanceDataReader/nasdaq/: listing.py
src/FinanceDataReader/naver/: listing.py
src/FinanceDataReader/wikipedia/: listing.py
src/FinanceDataReader/yahoo/: data.py
tests/: test_basic.py  test_economy.py  test_international.py  test_investing.py  test_krx.py  test_main.py  test_markets.py  test_snap.py  test_us.py
tutorial/: FinanceDataReader Tutorial - FRED 경기 선행 지표.ipynb  FinanceDataReader Tutorial - VIX 지수와 관련 종목.ipynb  FinanceDataReader Tutorial - 섹터 평균 수익률과 개별 종목의 수익률.ipynb  FinanceDataReader Tutorial - 여러 종목의 가격을 한번에.ipynb  FinanceDataReader Tutorial - 차트 그리기와 활용하기.ipynb  FinanceDataReader Tutorial FRED 경기 선행 지표.ipynb  FinanceDataReader_Tutorial_01_Adjusted_closing_price.ipynb
wikipedia/: listing.py
yahoo/: data.py
yahoo/.ipynb_checkpoints/: data-checkpoint.py
