[project]
name = "finance-datareader"
version = "0.9.93"
description = "Financial data reader (price, stock list of markets)"
maintainers = [{ name = "FinanceData.KR", email = "plusjune@financedata.kr" }]
authors = [{ name = "FinanceData.KR", email = "plusjune@financedata.kr" }]
readme = "README.md"
license = { text = "MIT License" }
keywords = ["data", "finance"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.5"
dependencies = [
    "pandas>=0.19.2",
    "requests>=2.3.0",
    "requests-file",
    "lxml",
    "tqdm",
    "beautifulsoup4",
    "plotly",
]

[project.urls]
Repository = "https://github.com/financedata/financedatareader"

[project.optional-dependencies]
notebook = ["ipykernel", "nbformat>=4.2.0"]
test = ["pytest"]
docs = ["sphinx"]

[tool.rye]
managed = true
dev-dependencies = ["finance-datareader[notebook,test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/FinanceDataReader"]

[tool.hatch.build.targets.sdist]
include = [
    "src/FinanceDataReader",
    "README.md",
    "LICENSE.txt",           # FIXME
]
exclude = ["*.pyc"]
